# cam

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main_gui.cpp  main_window.cpp
src/viewer/: OCCTWidget.cpp
